maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: illegal start of simple expression
  		setIndication(coord(0) + 1,, coord(1) 1 + getIndication(coord(0), coord(1)))
                                           ^JediEscaper:34: error: ')' expected but '}' found.
  }
  ^